fix some spacing

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   font-size: 2rem;
   gap: 2rem;
-  width: 100%;
-  max-width: 800px;
+  width: 98%;
+  max-width: 1000px;
+  padding: 2rem;
 }
 
 .label {
@@ -78,5 +79,6 @@ textarea {
 @media screen and (max-width: 768px) {
   .contact {
     font-size: small;
+    max-width: 500px;
   }
 }
